{
    "name": "InputActions",
    "maps": [
        {
            "name": "userInterface",
            "id": "2f370c76-663a-4779-9f67-de91053107f9",
            "actions": [
                {
                    "name": "pointerMove",
                    "type": "Value",
                    "id": "11fbea4d-2131-48a1-81ee-ac84576ca1cb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "pointerPress",
                    "type": "Button",
                    "id": "128ee287-cd27-467a-a554-71f28315405f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "13da705d-ebb7-49d5-99d7-97ec1ed9864d",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pointerMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6eede1a3-2c3e-4fbb-88f6-589daf6f064e",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "gameplay",
            "id": "7a0c649b-a4f7-4bfa-8b33-68b73732bd54",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "ba03d835-3798-4b4a-a007-6e94ac2eb7d6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "8f3f05c7-a720-4826-9680-0502179cb95c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cameraGrab",
                    "type": "Button",
                    "id": "db47b7e7-e149-4e1b-95eb-66e50a92661e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cameraRotate",
                    "type": "Value",
                    "id": "579680b4-5e64-428d-bf11-b478c37123aa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "cameraLock",
                    "type": "Button",
                    "id": "2c83cf63-7463-48c0-abef-7b832a1fec3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "interact",
                    "type": "Button",
                    "id": "82d688de-b724-41a8-b1e2-525d3e335d30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "7347e6f9-0039-454f-8a5e-da3cf9b6587c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e11eb993-a7b8-4fbf-8e7c-241be29ff1ba",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1179bc85-d879-440e-b4b8-5d9fb521889e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "855240cd-007f-40c7-a07c-96a5ab6edc5f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "241f959c-3dc2-419b-a718-809f3a1976f1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cc7d5937-2775-4ce6-bc4a-9aba05dc22a3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d017e7f-3d0f-421d-b4e2-7c6fce354299",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0a85b2f-2a8d-43c2-a3c4-3b3bf373c218",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c4e7557-6309-4b43-aa7a-eeb18e742b38",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cameraLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62ada9a3-53f3-423b-baa4-8e1902a02fee",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}